Navbar padding and alignment fixes

--- a/client/src/Components/ClientExperiences/ClientExperiences.scss
+++ b/client/src/Components/ClientExperiences/ClientExperiences.scss
@@ -5,9 +5,11 @@
   padding: 2rem 0;
 }
 
+//visible borders(on borders themselves) formed on hover for chromium
 .carousel-entry {
   border-right: solid 1rem #1e1e1e;
-  border-left: solid transparent;
+  box-shadow: none;
+  // border-left: solid transparent;
   flex: 0 0 calc(100% / 3);
   padding: 1rem;
   padding-top: 1rem;
@@ -18,15 +20,16 @@
   align-items: flex-start;
   background: var(--website-282828-colour);
   color: var(--website-white-colour);
-  border-radius: 0.5rem;
+  // border-radius: 0.5rem;
   opacity: 0.7;
   transition: translate 1s, opacity 0.3s ease-in-out, transform 0.3s ease-in-out,
-    border-left 0.3s ease-in-out, border-right 0.3s ease-in-out;
+    border-right 0.3s ease-in-out;
+  // border-left 0.3s ease-in-out,
 
   &:hover {
-    border-left: solid gray;
+    // border-left: solid gray;
     opacity: 1;
-    transform: scale(1, 1.05);
+    transform: scale(1.05, 1.05);
   }
 
   .quote-icon {
@@ -45,7 +48,7 @@
     display: flex;
 
     img {
-      border-radius: 25%;
+      border-radius: 15%;
       width: calc(88rem / 24);
       height: calc(88rem / 24);
       margin-right: 1rem;
